# sc3000

./: .gitignore  README.md
NanoGPT-Math/: pyproject.toml
NanoGPT-Math/data/: dpo_test_data.json
NanoGPT-Math/data_generation/: generate_data.ipynb
NanoGPT-Math/dpo/: dpo.ipynb
